[4/1/20] - 8:08pm - fixed overscroll problems on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,9 +4,3 @@
     display: flex;
     flex-direction: column;
 }
-
-@media screen and (orientation: portrait) {
-    body {
-        overscroll-behavior: none;
-    }
-}
